After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704833 - books sidebar shouldn't have type ahead find
books sidebar shouldn't have type ahead find
Status: RESOLVED FIXED
Product: devhelp
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: devhelp-maint
devhelp-maint
Depends on:
Blocks:
 
 
Reported: 2013-07-24 20:02 UTC by William Jon McCann
Modified: 2015-06-24 11:59 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description William Jon McCann 2013-07-24 20:02:20 UTC
The books sidebar shouldn't have type ahead find because it interferes with both the search entry and the type ahead find of the content view.
Comment 1 Sébastien Wilmet 2015-06-24 11:59:59 UTC
Fixed:
https://git.gnome.org/browse/devhelp/commit/?id=0fb620a23cddc3080b8013f6117bab2637291084

It was reviewed as part of bug #749797.