book-tree: disable type ahead search

The books sidebar shouldn't have type ahead find because it interferes
with both the search entry in the sidebar and the type ahead find of the
content view.

https://bugzilla.gnome.org/show_bug.cgi?id=704833